--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "file-loader": "^6.2.0",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "html2canvas": "^1.4.1"
   },
   "eslintConfig": {
     "root": true,
