--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "lodash-es": "^4.17.21",
+    "pinia": "^3.0.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
