Update deploy workflow and local settings
Adds steps to copy the win98 directory to public in the deploy workflow and sets timeout limits for jobs. Updates settings.local.json to enable additional Bash commands and MCP servers.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Copy win98 to public directory
+        run: cp -r win98 public/
+
       - name: Build project
         run: npm run build
         env:
@@ -45,6 +48,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     environment:
       name: github-pages
@@ -54,3 +58,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        timeout-minutes: 5
