--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "osc": "^2.4.5",
     "pinia": "^3.0.4",
     "vue": "^3.2.13",
+    "vue-router": "^4.2.5",
     "ws": "^8.18.3"
   },
   "devDependencies": {
